<?xml version="1.0"?>
<package format="2">
  <name>xela_ros</name>
  <version>0.0.0</version>
  <description>The xela_ros package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
	<build_depend>message_generation</build_depend>
	<exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
